--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -14,7 +14,6 @@
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <!-- Other CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-
     <!-- Custom styles for this template -->
     <link href="css/page.css" rel="stylesheet">
 </head>
@@ -71,8 +70,8 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="first-slide"
-                     src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                <img class="first-slide slide" style="background-size: auto; background-repeat: no-repeat;"
+                     src="https://wnoz.apsl.edu.pl/assets/themes/apsl_wnoz/images/examples/hero-page-1860x320.jpg"
                      alt="First slide">
                 <div class="container">
                     <div class="carousel-caption text-left">
@@ -84,8 +83,8 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="second-slide"
-                     src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                <img class="second-slide slide" style="background-size: auto; background-repeat: no-repeat;"
+                     src="https://wnoz.apsl.edu.pl/assets/themes/apsl_wnoz/images/examples/hero-page-1860x320.jpg"
                      alt="Second slide">
                 <div class="container">
                     <div class="carousel-caption">
@@ -97,8 +96,8 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="third-slide"
-                     src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                <img class="third-slide slide" style="background-size: auto; background-repeat: no-repeat;"
+                     src="https://wnoz.apsl.edu.pl/assets/themes/apsl_wnoz/images/examples/hero-page-1860x320.jpg"
                      alt="Third slide">
                 <div class="container">
                     <div class="carousel-caption text-right">
@@ -110,8 +109,8 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="third-slide"
-                     src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                <img class="four-slide slide" style="background-size: auto; background-repeat: no-repeat;"
+                     src="https://wnoz.apsl.edu.pl/assets/themes/apsl_wnoz/images/examples/hero-page-1860x320.jpg"
                      alt="Third slide">
                 <div class="container">
                     <div class="carousel-caption text-right">
@@ -163,13 +162,15 @@
                             </a>
                         </span>
                         <span class="aliricon aliricon-youtube">
-                            <a href="https://www.youtube.com/channel/UCz8hNTiTR0dwFOCJ0rg8f5Q" title="Vai al canale YouTube"
+                            <a href="https://www.youtube.com/channel/UCz8hNTiTR0dwFOCJ0rg8f5Q"
+                               title="Vai al canale YouTube"
                                target="_blank">
                                 <span class="aliricon-name">Youtube</span>
                             </a>
                         </span>
                         <span class="aliricon aliricon-telegram">
-                            <a href="https://t.me/joinchat/FuhWXEHTodV1GkDcoI49Fg" title="Unisciti al gruppo Telegram" target="_blank">
+                            <a href="https://t.me/joinchat/FuhWXEHTodV1GkDcoI49Fg" title="Unisciti al gruppo Telegram"
+                               target="_blank">
                                 <span class="aliricon-name">Telegram</span>
                             </a>
                         </span>
@@ -189,21 +190,52 @@
                     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
                         mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
                         magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-outline-light" href="#" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-outline-light" href="#" role="button">Continua &raquo;</a></p>
                 </div>
                 <div class="col-md-4">
                     <h2 class="worksans">HEADING</h2>
                     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
                         mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
                         magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-outline-light" href="#" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-outline-light" href="#" role="button">Continua &raquo;</a></p>
                 </div>
                 <div class="col-md-4">
-                    <h2 class="worksans">HEADING</h2>
-                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id
-                        ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                        condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                    <p><a class="btn btn-outline-light" href="#" role="button">View details &raquo;</a></p>
+                    <div class="card flex-md-row mb-4 box-shadow h-md-250">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="card-body d-flex flex-column align-items-start">
+                                    <span style="text-align: center" data-toggle="modal" data-target="#serverDataModal"><i
+                                            class="fas fa-server fa-4x"></i></span>
+                                </div>
+                            </div>
+                            <div class="col-md-9">
+                                <div class="card-body align-items-start">
+                                    <strong class="d-inline-block">Server</strong>
+                                    <p class="card-text" style="margin-bottom: 0"><i class="fas fa-users"></i> <span
+                                            class="aliruser"></span>/<span class="alirmaxuser"></span></p>
+                                    <div class="text-muted" style="font-size: smaller">IP: <span
+                                            class="aliraddress"></span> Porta: <span class="alirport"></span></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card flex-md-row mb-4 box-shadow h-md-250">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="card-body d-flex flex-column align-items-start">
+                                    <span style="text-align: center"><i class="fas fa-server fa-4x"></i></span>
+                                </div>
+                            </div>
+                            <div class="col-md-9">
+                                <div class="card-body align-items-start">
+                                    <strong class="d-inline-block">Server</strong>
+                                    <p class="card-text" style="margin-bottom: 0">1/10</p>
+                                    <div class="text-muted" style="font-size: smaller">IP: 145.239.149.40 Porta: 2302
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -375,7 +407,7 @@
                 </ul>
             </div>
             <div class="col-6 col-md">
-                <h5><i class="fas fa-user-secret"></i> ALIR Team</h5>
+                <h5><i class="fas fa-user-secret"></i> Team</h5>
                 <ul class="list-unstyled text-small">
                     <li><a class="text-muted" href="#">Lo staff</a></li>
                     <li><a class="text-muted" href="#">Privacy policy</a></li>
@@ -387,10 +419,42 @@
                 <img class="mb-2  rounded mx-auto d-block"
                      src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
                 <small class="d-block mb-3 text-muted" style="text-align: center">© 2017-2018</small>
+                <small class="d-block mb-3 text-muted tip" style="text-align: center">Creata con <i class="fas fa-heart"
+                                                                                                    style="color: firebrick;"></i>
+                    da andreacw
+                </small>
             </div>
         </div>
     </footer>
 </main>
+
+<div class="modal fade" id="serverDataModal" tabindex="-1" role="dialog" aria-labelledby="serverModal"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Altre informazioni sul server</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true" style="color: white"><i class="fas fa-times"></i></span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <h3 id="alirservernamne"></h3>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Indirizzo: <span class="aliradress"></span></li>
+                    <li class="list-group-item">Porta: <span class="alirport"></span></li>
+                    <li class="list-group-item">Slot: <span class="aliruser"></span>/<span class="alirmaxuser"></span></li>
+                    <li class="list-group-item">Ultimo controllo: <span id="alirlastcheck"></span></li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                    <li class="list-group-item">Cras justo odio</li>
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Morbi leo risus</li>
+                    <li class="list-group-item">Porta ac consectetur ac</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
@@ -402,6 +466,7 @@
         crossorigin="anonymous"></script>
 <script defer src="https://alir.eu/etero/js/fontawesome5.min.js"></script>
 <script defer src="js/home.js"></script>
+<script defer src="js/status.js"></script>
 <!--<script src="https://cdnjs.cat.net/ajax/libs/defiant.js/1.2.6/defiant.js"></script>-->
 </body>
 </html>
