--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -71,7 +71,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="first-slide slide" style="background-size: auto; background-repeat: no-repeat;"
-                     src="https://wnoz.apsl.edu.pl/assets/themes/apsl_wnoz/images/examples/hero-page-1860x320.jpg"
+                     src=""
                      alt="First slide">
                 <div class="container">
                     <div class="carousel-caption text-left">
@@ -84,7 +84,7 @@
             </div>
             <div class="carousel-item">
                 <img class="second-slide slide" style="background-size: auto; background-repeat: no-repeat;"
-                     src="https://wnoz.apsl.edu.pl/assets/themes/apsl_wnoz/images/examples/hero-page-1860x320.jpg"
+                     src=""
                      alt="Second slide">
                 <div class="container">
                     <div class="carousel-caption">
@@ -97,7 +97,7 @@
             </div>
             <div class="carousel-item">
                 <img class="third-slide slide" style="background-size: auto; background-repeat: no-repeat;"
-                     src="https://wnoz.apsl.edu.pl/assets/themes/apsl_wnoz/images/examples/hero-page-1860x320.jpg"
+                     src=""
                      alt="Third slide">
                 <div class="container">
                     <div class="carousel-caption text-right">
@@ -110,7 +110,7 @@
             </div>
             <div class="carousel-item">
                 <img class="four-slide slide" style="background-size: auto; background-repeat: no-repeat;"
-                     src="https://wnoz.apsl.edu.pl/assets/themes/apsl_wnoz/images/examples/hero-page-1860x320.jpg"
+                     src=""
                      alt="Third slide">
                 <div class="container">
                     <div class="carousel-caption text-right">
@@ -248,8 +248,8 @@
                     </div>
                 </div>
                 <!-- Example row of columns -->
-                <div class="row">
-                    <div class="col-md-6">
+                <div class="row" id="appendResultHere">
+                    <!--<div class="col-md-6">
                         <div class="card flex-md-row mb-4 box-shadow h-md-250">
                             <div class="card-body d-flex flex-column align-items-start">
                                 <strong class="d-inline-block mb-2 text-primary">World</strong>
@@ -268,116 +268,12 @@
                                  src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22250%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20250%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1623d955d74%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1623d955d74%22%3E%3Crect%20width%3D%22200%22%20height%3D%22250%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2255%22%20y%3D%22131%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
                                  data-holder-rendered="true">
                         </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card flex-md-row mb-4 box-shadow h-md-250">
-                            <div class="card-body d-flex flex-column align-items-start">
-                                <strong class="d-inline-block mb-2 text-success">Design</strong>
-                                <h3 class="mb-0">
-                                    <a href="#" class="wstitle">Featured post</a>
-                                </h3>
-                                <div class="mb-1 text-muted">Nov 11</div>
-                                <p class="card-text mb-auto">This is a wider card with supporting text below as a
-                                    natural
-                                    lead-in to additional content.</p>
-                                <a href="#">Continua a leggere... <i class="fas fa-external-link-alt"></i></a>
-                            </div>
-                            <img class="card-img-right flex-auto d-none d-md-block"
-                                 data-src="holder.js/200x250?theme=thumb"
-                                 alt="Thumbnail [200x250]" style="width: 200px; height: 250px;"
-                                 src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22250%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20250%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1623d955d7c%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1623d955d7c%22%3E%3Crect%20width%3D%22200%22%20height%3D%22250%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2255%22%20y%3D%22131%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                                 data-holder-rendered="true">
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="card flex-md-row mb-4 box-shadow h-md-250">
-                            <div class="card-body d-flex flex-column align-items-start">
-                                <strong class="d-inline-block mb-2 text-primary">World</strong>
-                                <h3 class="mb-0">
-                                    <a href="#" class="wstitle">Featured post</a>
-                                </h3>
-                                <div class="mb-1 text-muted">Nov 12</div>
-                                <p class="card-text mb-auto">This is a wider card with supporting text below as a
-                                    natural
-                                    lead-in to additional content.</p>
-                                <a href="#">Continua a leggere... <i class="fas fa-external-link-alt"></i></a>
-                            </div>
-                            <img class="card-img-right flex-auto d-none d-md-block"
-                                 data-src="holder.js/200x250?theme=thumb"
-                                 alt="Thumbnail [200x250]" style="width: 200px; height: 250px;"
-                                 src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22250%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20250%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1623d955d74%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1623d955d74%22%3E%3Crect%20width%3D%22200%22%20height%3D%22250%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2255%22%20y%3D%22131%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                                 data-holder-rendered="true">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card flex-md-row mb-4 box-shadow h-md-250">
-                            <div class="card-body d-flex flex-column align-items-start">
-                                <strong class="d-inline-block mb-2 text-success">Design</strong>
-                                <h3 class="mb-0">
-                                    <a href="#" class="wstitle">Featured post</a>
-                                </h3>
-                                <div class="mb-1 text-muted">Nov 11</div>
-                                <p class="card-text mb-auto">This is a wider card with supporting text below as a
-                                    natural
-                                    lead-in to additional content.</p>
-                                <a href="#">Continua a leggere... <i class="fas fa-external-link-alt"></i></a>
-                            </div>
-                            <img class="card-img-right flex-auto d-none d-md-block"
-                                 data-src="holder.js/200x250?theme=thumb"
-                                 alt="Thumbnail [200x250]" style="width: 200px; height: 250px;"
-                                 src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22250%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20250%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1623d955d7c%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1623d955d7c%22%3E%3Crect%20width%3D%22200%22%20height%3D%22250%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2255%22%20y%3D%22131%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                                 data-holder-rendered="true">
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="card flex-md-row mb-4 box-shadow h-md-250">
-                            <div class="card-body d-flex flex-column align-items-start">
-                                <strong class="d-inline-block mb-2 text-primary">World</strong>
-                                <h3 class="mb-0">
-                                    <a href="#" class="wstitle">Featured post</a>
-                                </h3>
-                                <div class="mb-1 text-muted">Nov 12</div>
-                                <p class="card-text mb-auto">This is a wider card with supporting text below as a
-                                    natural
-                                    lead-in to additional content.</p>
-                                <a href="#">Continua a leggere... <i class="fas fa-external-link-alt"></i></a>
-                            </div>
-                            <img class="card-img-right flex-auto d-none d-md-block"
-                                 data-src="holder.js/200x250?theme=thumb"
-                                 alt="Thumbnail [200x250]" style="width: 200px; height: 250px;"
-                                 src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22250%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20250%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1623d955d74%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1623d955d74%22%3E%3Crect%20width%3D%22200%22%20height%3D%22250%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2255%22%20y%3D%22131%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                                 data-holder-rendered="true">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card flex-md-row mb-4 box-shadow h-md-250">
-                            <div class="card-body d-flex flex-column align-items-start">
-                                <strong class="d-inline-block mb-2 text-success">Design</strong>
-                                <h3 class="mb-0">
-                                    <a href="#" class="wstitle">Featured post</a>
-                                </h3>
-                                <div class="mb-1 text-muted">Nov 11</div>
-                                <p class="card-text mb-auto">This is a wider card with supporting text below as a
-                                    natural
-                                    lead-in to additional content.</p>
-                                <a href="#">Continua a leggere... <i class="fas fa-external-link-alt"></i></a>
-                            </div>
-                            <img class="card-img-right flex-auto d-none d-md-block"
-                                 data-src="holder.js/200x250?theme=thumb"
-                                 alt="Thumbnail [200x250]" style="width: 200px; height: 250px;"
-                                 src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22250%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20250%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1623d955d7c%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1623d955d7c%22%3E%3Crect%20width%3D%22200%22%20height%3D%22250%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2255%22%20y%3D%22131%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                                 data-holder-rendered="true">
-                        </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
         <a type="button" id="backtop" href="#top" class="btn  btn-outline-light btn-lg btn-block"><i
-                class="fas fa-arrow-up "></i> Block level button</a>
+                class="fas fa-arrow-up "></i> Torna in alto!</a>
         <hr>
     </div><!-- /.container -->
     <!-- FOOTER -->
@@ -418,8 +314,7 @@
                 <img class="mb-2  rounded mx-auto d-block"
                      src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
                 <small class="d-block mb-3 text-muted" style="text-align: center">© 2017-2018</small>
-                <small class="d-block mb-3 text-muted tip" style="text-align: center">Creata con <i class="fas fa-heart"
-                                                                                                    style="color: firebrick;"></i>
+                <small class="d-block mb-3 text-muted tip" style="text-align: center">Creata con <i class="fas fa-heart" style="color: firebrick;"></i>
                     da andreacw
                 </small>
             </div>
@@ -471,6 +366,8 @@
         integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous"></script>
 <script defer src="https://alir.eu/etero/js/fontawesome5.min.js"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/moment.min.js"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/locale/it.js"></script>
 <script defer src="js/home.js"></script>
 <script defer src="js/status.js"></script>
 <!--<script src="https://cdnjs.cat.net/ajax/libs/defiant.js/1.2.6/defiant.js"></script>-->
