--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -202,12 +202,6 @@
                 <div class="col-md-4">
                     <div class="card flex-md-row mb-4 box-shadow h-md-250" id="alirserver" data-toggle="modal" data-target="#serverDataModal">
                         <div class="row">
-                            <div class="col-md-3">
-                                <div class="card-body d-flex flex-column align-items-start">
-                                    <span style="text-align: center"><i id="alirservericon"
-                                            class="fas fa-server fa-4x"></i></span>
-                                </div>
-                            </div>
                             <div class="col-md-9">
                                 <div class="card-body align-items-start">
                                     <strong class="d-inline-block">Server</strong>
@@ -217,20 +211,26 @@
                                             class="aliraddress"></span>:<span class="alirport"></span></div>
                                 </div>
                             </div>
+                            <div class="col-md-3">
+                                <div class="card-body">
+                                    <span style="text-align: center"><i id="alirservericon"
+                                                                        class="fas fa-server fa-4x"></i></span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="card flex-md-row mb-4 box-shadow h-md-250" id="tsserver">
                         <div class="row">
-                            <div class="col-md-3">
-                                <div class="card-body d-flex flex-column align-items-start">
-                                    <span style="text-align: center"><i style="color: green" class="fas fa-server fa-4x"></i></span>
-                                </div>
-                            </div>
                             <div class="col-md-9">
                                 <div class="card-body align-items-start">
                                     <strong class="d-inline-block">Teamspeak</strong>
                                     <p class="card-text" style="margin-bottom: 0"><i class="fas fa-users"></i> 69/256</p>
                                     <div class="text-muted" style="font-size: smaller">IP: TS.ALIR.EU</div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card-body">
+                                    <span style="text-align: center"><i style="color: green" class="fas fa-server fa-4x"></i></span>
                                 </div>
                             </div>
                         </div>
